# Neksis-v1

./: .gitignore  COMPLETE_NEKSIS_TUTORIAL.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  NEKSIS_COMPLETE_GUIDE.txt  NEKSIS_PROGRAMMING_GUIDE.md  OPTIMIZATION_README.md  PRODUCTION_READINESS.md  README.md  TODO_IMPLEMENTATION_PLAN.md  advanced_test.nx  comprehensive_test.nx  comprehensive_tests.nx  debug_tokens.nx  demo_optimization.rs  demonstrate_optimizations.rs  final_comprehensive_test.nx  minimal_test.nx  optimization_test.nx  quick_test.rs  run_advanced_tests.rs  run_neksis.bat  simple_let_test.nx  simple_test.nx  simple_working_test.nx  test_advanced.nx  test_arrays.nx  test_basic.nx  test_bool_type.nx  test_booleans.nx  test_bytecode.nx  test_calculator.nx  test_comparisons.nx  test_compiler.ps1  test_compiler.rs  test_control.nx  test_control_flow.nx  test_edge_cases.nx  test_edge_cases_no_comments.nx  (+19 more)
docs/: README.md
examples/: 01_basics.nx  02_control_flow.nx  03_functions.nx  04_algorithms.nx  README.md  basic_tests.nx  debug_test.nx  demo.nx  final_test.nx  hello_world.nx  nexus_production_demo.rs  simple_test.nx
neksisc/: Cargo.toml  achievement.txt  advanced_features_test.nx  advanced_showcase.nx  combo_test.txt  comprehensive_test.txt  debug_dict.nx  debug_dict2.nx  debug_dict3.nx  debug_dict4.nx  demo.txt  dict_test_final.nx  dict_test_inline.nx  features_demo.nx  final_test.txt  incremental_test.nx  neksis_revolution.txt  nexus.json  output.txt  simple_dict_test.nx  stable_test.txt  test1.txt  test_compiler_functionality.rs  test_format.nx  test_output.txt  ultimate_test.txt  verify_compiler.rs
neksisc/src/: advanced_rust_features.rs  ai.rs  ai_assistant.rs  ast.rs  async_runtime.rs  basic_test_runner.rs  borrow_checker.rs  bytecode_compiler.rs  cli.rs  collections.rs  compiler.rs  comprehensive_test_runner.rs  concurrency.rs  deployment_manager.rs  error.rs  error_handling.rs  ffi.rs  final_test.rs  formatter.rs  integration_fixes.rs  jit_compiler.rs  lexer.rs  lib.rs  linter.rs  lsp.rs  macro_system.rs  main.nx  main.rs  memory_manager.rs  memory_profiler.rs  minimal_test_runner.rs  modern_ast.rs  modern_async.rs  modern_integration.rs  modern_lexer.rs  modern_parser.rs  modern_stdlib.rs  module_system.rs  neksis_engine.rs  networking.rs  (+34 more)
neksisc/src/codegen/: llvm.rs  mod.rs  simple.rs
neksisc/src/stdlib/: collections.rs  crypto.rs  error.rs  io.rs  math.rs  mod.rs  networking.rs  string.rs  threading.rs  time.rs
neksisc/test-fixed/: README.md  nexus.json
neksisc/test-fixed/src/: main.nx
src/: advanced_optimization_test_runner.rs  basic_test_runner.rs  comprehensive_optimization_runner.rs  comprehensive_test_runner.rs  enhanced_optimization_analyzer.rs  gguf_integration_test.nx  main.rs  modern_test_runner.rs  simple_parser_test.rs  test_runner.rs
tests/: advanced_math_real.nx  basic_arithmetic_real.nx  debug_function_params.nx  division_test_real.nx  function_test_real.nx  hello_world_real.nx  limits_test_real.nx  (+10 more)
(+3 files in other folders)
