[package]
name = "neksis"
version = "0.1.0"
edition = "2021"
authors = ["Neksis Language Team"]
description = "The Neksis Programming Language"
license = "MIT"
repository = "https://github.com/neksis-lang/neksis"

[dependencies]
neksisc = { path = "./neksisc" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
lsp-types = "0.94"
tower-lsp = "0.20"

[[bin]]
name = "neksis"
path = "src/main.rs"

[[bin]]
name = "comprehensive_test"
path = "src/comprehensive_test_runner.rs"

[[bin]]
name = "simple_parser_test"
path = "src/simple_parser_test.rs" 