[package]
name = "neksisc"
version = "0.1.0"
edition = "2021"
description = "The Neksis Language Compiler"
authors = ["Neksis Language Team"]
license = "MIT"
repository = "https://github.com/neksis-lang/neksis"

[[bin]]
name = "neksisc"
path = "src/main.rs"

[[bin]]
name = "neksis"
path = "src/main.rs"

[[bin]]
name = "basic_test_runner"
path = "src/basic_test_runner.rs"

[[bin]]
name = "test_runner"
path = "src/test_runner.rs"

[[bin]]
name = "simple_test_runner"
path = "src/simple_test_runner.rs"

[[bin]]
name = "minimal_test_runner"
path = "src/minimal_test_runner.rs"

[[bin]]
name = "comprehensive_test_runner"
path = "src/comprehensive_test_runner.rs"

[features]
default = []
llvm-backend = ["inkwell"]
wasm-backend = ["wasmtime"]
full-backend = ["llvm-backend", "wasm-backend"]

[dependencies]
# Core dependencies
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.0"

# LLVM backend (optional)
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"], optional = true }

# FFI and interop
libloading = "0.7"
libc = "0.2"
pyo3 = { version = "0.18", features = ["auto-initialize"] }

# Concurrency and async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Memory management
crossbeam = "0.8"
parking_lot = "0.12"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.0", features = ["v4"] }

# WASM support (optional)
wasmtime = { version = "1.0", optional = true }

# Memory profiling
backtrace = "0.3"
memmap2 = "0.5"

# Macro system
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# REPL support
rustyline = "10.0"
syntect = "5.0"

# Standard library features
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
sha2 = "0.10"
aes = "0.8"
base64 = "0.21"

# Crypto dependencies
hmac = "0.12"
md5 = "0.7"
sha1 = "0.10"

# Package management and LSP
dirs = "5.0"

[dev-dependencies]
tempfile = "3.2"
criterion = "0.4"
proptest = "1.0" 